# screeps-map-processing

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: get_xy_comparison.rs
src/: compressed_terrain_db.rs  lib.rs
src/compressed_terrain/: compressed_room_edge_terrain.rs  compressed_terrain.rs  mod.rs
src/room_connectivity/: exit.rs
src/run_length_encoding/: generic_rle.rs  mod.rs
src/run_length_encoding/rle_terrain/: generic_rle_terrain.rs  mod.rs  packed_rle_terrain.rs  wildcard_rle_terrain.rs
tests/: exhaustive-tests.rs
